--- a/src/blackjack/BlackjackUI2.form
+++ b/src/blackjack/BlackjackUI2.form
@@ -57,7 +57,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="BalancejTextField" min="-2" pref="101" max="-2" attributes="0"/>
-                          <EmptySpace pref="558" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="PlaceBetjButton" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="HitjButton" min="-2" max="-2" attributes="0"/>
@@ -313,6 +313,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Hit"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="HitjButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="StayjButton">
           <Properties>
