--- a/src/blackjack/BlackjackUI2.form
+++ b/src/blackjack/BlackjackUI2.form
@@ -324,6 +324,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Stay"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="StayjButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
